feat: list top cs/main recommended paper
